// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Votes should emit action on continue button 1`] = `<DocumentFragment />`;

exports[`Votes should render 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC coERBU"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznxsB gUNIFm"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-fznyAO hoFCfo flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw bGpsrC"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="sc-fznJRM kZYZrA"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Votes
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Manage your cryptoasset staking
              </div>
            </div>
            <div>
              <div
                class="relative"
              >
                <button
                  class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                  data-testid="header-search-bar__button"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      Search
                    </span>
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        search.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container mx-auto px-14"
      >
        <div
          class="grid grid-flow-col grid-cols-2 gap-6 -my-5"
        >
          <div
            class="flex items-center py-6 true "
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Network
              </div>
              <div
                class="font-semibold"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="Votes__network-menu"
                  data-testid="SelectNetwork"
                  role="combobox"
                >
                  <label
                    for="Votes__network-input"
                    id="Votes__network-label"
                  />
                  <div
                    class="sc-Axmtr jzhOwR"
                    data-testid="SelectNetworkInput"
                  >
                    <div
                      class="sc-AxhUy sc-AxgMl kAPRWA px-4"
                    >
                      <div
                        aria-label="Ark Devnet"
                        class="sc-AxirZ fuoUNN border-theme-primary-100 text-theme-primary-400"
                        data-testid="SelectNetworkInput__network"
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          data-testid="NetworkIcon__icon"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="sc-AxhUy escgqZ py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
                      data-testid="SelectNetworkInput__typeahead"
                    >
                      Ark Devnet
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-controls="Votes__network-menu"
                      aria-labelledby="Votes__network-label"
                      autocomplete="off"
                      class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                      data-testid="SelectNetworkInput__input"
                      disabled=""
                      id="Votes__network-input"
                      placeholder="Select Network"
                      value="Ark Devnet"
                    />
                  </div>
                </div>
                <ul
                  aria-labelledby="Votes__network-label"
                  class="grid grid-cols-6 gap-6 mt-6"
                  id="Votes__network-menu"
                  role="listbox"
                >
                  <li
                    aria-selected="false"
                    class="inline-block cursor-pointer"
                    data-testid="SelectNetwork__NetworkIcon--container"
                    disabled=""
                    id="Votes__network-item-0"
                    role="option"
                  >
                    <div
                      aria-label="Ark"
                      class="sc-AxirZ bjGJqJ text-theme-neutral-light"
                      data-testid="NetworkIcon-ARK-mainnet"
                    >
                      <div
                        class="sc-AxiKw fubePL"
                        data-testid="NetworkIcon__icon"
                        height="26"
                        width="26"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="inline-block cursor-pointer"
                    data-testid="SelectNetwork__NetworkIcon--container"
                    disabled=""
                    id="Votes__network-item-1"
                    role="option"
                  >
                    <div
                      aria-label="Ark Devnet"
                      class="sc-AxirZ bjGJqJ text-theme-success-500 border-theme-success-200"
                      data-testid="NetworkIcon-ARK-devnet"
                    >
                      <div
                        class="sc-AxiKw fubePL"
                        data-testid="NetworkIcon__icon"
                        height="26"
                        width="26"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="flex items-center py-6 true mt-2"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Address
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="relative flex items-center pb-24"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                    data-testid="Input"
                    disabled=""
                    type="text"
                  />
                  <div
                    class="absolute flex items-center justify-between w-full ml-3"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mr-3"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          />
                        </div>
                      </div>
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                          data-testid="address__wallet-name"
                        >
                          ARK Wallet 1
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          D8rr7B…s6YUYD
                        </span>
                      </div>
                    </div>
                    <div
                      class="sc-AxiKw dklFyP mr-6"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fznJRM kZYZrA flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            data-testid="DelegateTable"
          >
            <h2
              class="py-5 text-2xl font-bold"
            >
              Select a Delegate
            </h2>
            <div
              class="sc-fzokOt cgkaSl"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Delegate Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Rank
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Votes
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top flex justify-center"
                      >
                        <div>
                          Profile
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--4"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Comm.
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--5"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Payout
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--6"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Min.
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--7"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Commission (Daily)
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--8"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Vote
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <span>
                            arkx
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-0"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                                title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                              />
                            </div>
                          </div>
                          <span>
                            genesis_42
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #2
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-1"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                              />
                            </div>
                          </div>
                          <span>
                            genesis_17
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #3
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-2"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                          <span>
                            testwallet2
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-3"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Votes should select a delegate 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC coERBU"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznxsB gUNIFm"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-fznKkj bZvceT text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-fznyAO hoFCfo flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw bGpsrC"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="sc-fznJRM kZYZrA"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Votes
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Manage your cryptoasset staking
              </div>
            </div>
            <div>
              <div
                class="relative"
              >
                <button
                  class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                  data-testid="header-search-bar__button"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      Search
                    </span>
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        search.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container mx-auto px-14"
      >
        <div
          class="grid grid-flow-col grid-cols-2 gap-6 -my-5"
        >
          <div
            class="flex items-center py-6 true "
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Network
              </div>
              <div
                class="font-semibold"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="Votes__network-menu"
                  data-testid="SelectNetwork"
                  role="combobox"
                >
                  <label
                    for="Votes__network-input"
                    id="Votes__network-label"
                  />
                  <div
                    class="sc-Axmtr jzhOwR"
                    data-testid="SelectNetworkInput"
                  >
                    <div
                      class="sc-AxhUy sc-AxgMl kAPRWA px-4"
                    >
                      <div
                        aria-label="Ark Devnet"
                        class="sc-AxirZ fuoUNN border-theme-primary-100 text-theme-primary-400"
                        data-testid="SelectNetworkInput__network"
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          data-testid="NetworkIcon__icon"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="sc-AxhUy escgqZ py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
                      data-testid="SelectNetworkInput__typeahead"
                    >
                      Ark Devnet
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-controls="Votes__network-menu"
                      aria-labelledby="Votes__network-label"
                      autocomplete="off"
                      class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                      data-testid="SelectNetworkInput__input"
                      disabled=""
                      id="Votes__network-input"
                      placeholder="Select Network"
                      value="Ark Devnet"
                    />
                  </div>
                </div>
                <ul
                  aria-labelledby="Votes__network-label"
                  class="grid grid-cols-6 gap-6 mt-6"
                  id="Votes__network-menu"
                  role="listbox"
                >
                  <li
                    aria-selected="false"
                    class="inline-block cursor-pointer"
                    data-testid="SelectNetwork__NetworkIcon--container"
                    disabled=""
                    id="Votes__network-item-0"
                    role="option"
                  >
                    <div
                      aria-label="Ark"
                      class="sc-AxirZ bjGJqJ text-theme-neutral-light"
                      data-testid="NetworkIcon-ARK-mainnet"
                    >
                      <div
                        class="sc-AxiKw fubePL"
                        data-testid="NetworkIcon__icon"
                        height="26"
                        width="26"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="inline-block cursor-pointer"
                    data-testid="SelectNetwork__NetworkIcon--container"
                    disabled=""
                    id="Votes__network-item-1"
                    role="option"
                  >
                    <div
                      aria-label="Ark Devnet"
                      class="sc-AxirZ bjGJqJ text-theme-success-500 border-theme-success-200"
                      data-testid="NetworkIcon-ARK-devnet"
                    >
                      <div
                        class="sc-AxiKw fubePL"
                        data-testid="NetworkIcon__icon"
                        height="26"
                        width="26"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="flex items-center py-6 true mt-2"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Address
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="relative flex items-center pb-24"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                    data-testid="Input"
                    disabled=""
                    type="text"
                  />
                  <div
                    class="absolute flex items-center justify-between w-full ml-3"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mr-3"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          />
                        </div>
                      </div>
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                          data-testid="address__wallet-name"
                        >
                          ARK Wallet 1
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          D8rr7B…s6YUYD
                        </span>
                      </div>
                    </div>
                    <div
                      class="sc-AxiKw dklFyP mr-6"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fznJRM kZYZrA flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            data-testid="DelegateTable"
          >
            <h2
              class="py-5 text-2xl font-bold"
            >
              Select a Delegate
            </h2>
            <div
              class="sc-fzokOt cgkaSl"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Delegate Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Rank
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Votes
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top flex justify-center"
                      >
                        <div>
                          Profile
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--4"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Comm.
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--5"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Payout
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--6"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Min.
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--7"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Commission (Daily)
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--8"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Vote
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxiKw GMmVY"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW cKughK font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <span>
                            arkx
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW dDHFQE font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW gfBeGq justify-end"
                      >
                        <button
                          class="sc-fznKkj dMzuSY"
                          color="danger"
                          data-testid="DelegateRow__toggle-0"
                          type="button"
                        >
                          Unselect
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                                title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                              />
                            </div>
                          </div>
                          <span>
                            genesis_42
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #2
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-1"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                              />
                            </div>
                          </div>
                          <span>
                            genesis_17
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #3
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-2"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fzqNJr izeygt group"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="sc-fzqBZW jvkNTe font-bold"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                          <span>
                            testwallet2
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          #
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          %
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg justify-center"
                      >
                        <div
                          class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            msq.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW vQhQg font-bold text-theme-neutral-dark"
                      >
                        <span>
                          ...
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzqBZW cULgYW justify-end"
                      >
                        <button
                          class="sc-fznKkj eqyWCu"
                          color="primary"
                          data-testid="DelegateRow__toggle-3"
                          type="button"
                        >
                          Select
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="fixed bottom-0 left-0 right-0 pt-8 pb-10 pl-4 pr-12 bg-white shadow-2xl"
              data-testid="DelegateTable__footer"
            >
              <div
                class="flex"
              >
                <div
                  class="px-8 mr-8 font-semibold border-r border-theme-neutral-300"
                >
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    Quantity
                  </div>
                  <div
                    class="text-theme-neutral-dark"
                  >
                    1/1
                  </div>
                </div>
                <div
                  class="flex-1"
                >
                  <div
                    class="flex justify-between"
                  >
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="inline-flex"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            />
                          </div>
                        </div>
                        <div
                          class="flex flex-col"
                        >
                          <div
                            class="text-sm text-theme-neutral-dark"
                          >
                            Delegate
                          </div>
                          <div
                            class="text-theme-neutral"
                          >
                            arkx - D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="sc-fznKkj kfwfRc"
                      color="primary"
                      data-testid="DelegateTable__continue-button"
                      type="button"
                    >
                      Continue
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Votes should select network, address and delegate 1`] = `<DocumentFragment />`;
